[XY] Fixes the detailed tooltip wrap problem

--- a/src/plugins/chart_expressions/expression_xy/public/components/tooltip/tooltip.scss
+++ b/src/plugins/chart_expressions/expression_xy/public/components/tooltip/tooltip.scss
@@ -25,6 +25,7 @@
 .detailedTooltip__labelContainer,
 .detailedTooltip__valueContainer {
   overflow-wrap: break-word;
+  word-break: break-all;
   word-wrap: break-word;
 }
 
